colocado mais fotos

--- a/index.html
+++ b/index.html
@@ -26,27 +26,32 @@
         </nav>
         <div class="container1">
             <div class="container">
-                <div class="salada">
-                    <div class="salad" ><img class="salad" src="images/salada.jpg" alt="xis salada"></div>
-                    <div class="h1">
-                        <h1>xis salada</h1>
+                <div class="c1">
+                    <div class="salada">
+                        <div class="salad" ><img class="salad" src="images/salada.jpg" alt="xis salada"></div>
+                        <div class="h1">
+                            <h1>xis salada</h1>
+                        </div>
+                    </div>
+                    <div class=" coracao">
+                        <img class="cora" src="images/coracao.jpg" alt="xis coraçao">
+                        <h1>xis coração</h1>
+                    </div>
+                    <div class=" bacon">
+                        <img class="b" src="images/bacon.jpg" alt="xis de bacon">
+                        <h1>xis bacon</h1>
                     </div>
                 </div>
-                <div class=" coracao">
-                    <img class="cora" src="images/coracao.jpg" alt="xis coraçao">
-                    <h1>xis coração</h1>
-                </div>
-                <div class=" baicon">
-                    <h1>xis baicon</h1>
-                </div>
-                <div class=" frango">
-                    <h1>xis frango</h1>
-                </div>
-                <div class="estro">
-                    <h1> xis strogonoffe</h1>
-                </div>
-                <div class="infarto">
-                    <h1>xis infarto</h1>
+                <div class="c2">
+                    <div class=" frango">
+                        <h1>xis frango</h1>
+                    </div>
+                    <div class="estro">
+                        <h1> xis strogonoff</h1>
+                    </div>
+                    <div class="infarto">
+                        <h1>xis infarto</h1>
+                    </div>
                 </div>
             </div>
         </div>
