pagina principal pronta

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                         <li><a href="#">petiscos</a></li>
                         <li><a href="#">whatsapp</a></li>
                         <li class="cadastro"><a class="cd" href="#">cadastre-se</a> </li>
+                        <li class="log"><a href="#" class="log">login</a> </li>
                     </ul>
                 </div>
             </div>
@@ -30,27 +31,42 @@
                     <div class="salada">
                         <div class="salad" ><img class="salad" src="images/salada.jpg" alt="xis salada"></div>
                         <div class="h1">
-                            <h1>xis salada</h1>
+                            <h1>xis salada
+                                R$:15,00
+                            </h1>
                         </div>
                     </div>
                     <div class=" coracao">
                         <img class="cora" src="images/coracao.jpg" alt="xis coraçao">
-                        <h1>xis coração</h1>
+                        <h1>xis coração
+                            R$:18,00
+                        </h1>
                     </div>
                     <div class=" bacon">
                         <img class="b" src="images/bacon.jpg" alt="xis de bacon">
-                        <h1>xis bacon</h1>
+                        <h1>xis bacon
+                            R$:18,00
+                        </h1>
                     </div>
                 </div>
                 <div class="c2">
                     <div class=" frango">
-                        <h1>xis frango</h1>
+                        <img class="f" src="images/frango.jpg" alt="xis frango">
+                        <h1>xis frango
+                            R$:15,99
+                        </h1>
                     </div>
-                    <div class="estro">
-                        <h1> xis strogonoff</h1>
+                    <div class="stro">
+                        <img class="s" src="images/strogonoff.jpg" alt="xis estrogonoff">
+                        <h1> xis strogonoff
+                            R$:18,00
+                        </h1>
                     </div>
                     <div class="infarto">
-                        <h1>xis infarto</h1>
+                        <img class="i" src="images/infarto.jpg" alt="xis tudo">
+                        <h1>xis infarto
+                            R$:22,00
+                        </h1>
                     </div>
                 </div>
             </div>
