tentando fazer responsivo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <div class="container-menu">
                 <div class="logo">
-                    <img src="images/download.jpg" alt="tri-lanches">
+                    <img class="logoimg" src="images/download.jpg" alt="tri-lanches">
                 </div>
                 <div class="menu">
                     <ul>
