responsivo ate 1000px

--- a/index.html
+++ b/index.html
@@ -8,69 +8,73 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-        <nav>
-            <div class="container-menu">
-                <div class="logo">
-                    <img class="logoimg" src="images/download.jpg" alt="tri-lanches">
+        <header>
+                <div class="container-menu">
+                    <div class="logo">
+                        <img class="logoimg" src="images/download.jpg" alt="tri-lanches">
+                    </div>
+                    <div class="menu">
+                        <nav>
+                            <ul>
+                                <li> <a href="#">xis</a></li>
+                                <li><a href="#">cachorro quente</a></li>
+                                <li><a href="#">petiscos</a></li>
+                                <li><a href="#">whatsapp</a></li>
+                                <li class="cadastro"><a class="cd" href="#">cadastre-se</a> </li>
+                                <li class="log"><a href="#" class="log">login</a> </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-                <div class="menu">
-                    <ul>
-                        <li> <a href="#">xis</a></li>
-                        <li><a href="#">cachorro quente</a></li>
-                        <li><a href="#">petiscos</a></li>
-                        <li><a href="#">whatsapp</a></li>
-                        <li class="cadastro"><a class="cd" href="#">cadastre-se</a> </li>
-                        <li class="log"><a href="#" class="log">login</a> </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="container1">
-            <div class="container">
-                <div class="c1">
-                    <div class="salada">
-                        <div class="salad" ><img class="salad" src="images/salada.jpg" alt="xis salada"></div>
-                        <div class="h1">
-                            <h1>xis salada
-                                R$:15,00
+        </header>
+        <section>
+            <div class="container1">
+                <div class="container">
+                    <div class="c1">
+                        <div class="salada p8">
+                            <div class="salad" ><img class="salad p8" src="images/salada.jpg" alt="xis salada"></div>
+                            <div class="h1">
+                                <h1>xis salada<br>
+                                    R$:15,00
+                                </h1>
+                            </div>
+                        </div>
+                        <div class=" coracao p8">
+                            <img class="cora p8 " src="images/coracao.jpg" alt="xis coraçao">
+                            <h1>xis coração <br>
+                                R$:18,00
+                            </h1>
+                        </div>
+                        <div class=" bacon p8">
+                            <img class="b p8" src="images/bacon.jpg" alt="xis de bacon">
+                            <h1>xis bacon <br>
+                                R$:18,00
                             </h1>
                         </div>
                     </div>
-                    <div class=" coracao">
-                        <img class="cora" src="images/coracao.jpg" alt="xis coraçao">
-                        <h1>xis coração
-                            R$:18,00
-                        </h1>
-                    </div>
-                    <div class=" bacon">
-                        <img class="b" src="images/bacon.jpg" alt="xis de bacon">
-                        <h1>xis bacon
-                            R$:18,00
-                        </h1>
-                    </div>
-                </div>
-                <div class="c2">
-                    <div class=" frango">
-                        <img class="f" src="images/frango.jpg" alt="xis frango">
-                        <h1>xis frango
-                            R$:15,99
-                        </h1>
-                    </div>
-                    <div class="stro">
-                        <img class="s" src="images/strogonoff.jpg" alt="xis estrogonoff">
-                        <h1> xis strogonoff
-                            R$:18,00
-                        </h1>
-                    </div>
-                    <div class="infarto">
-                        <img class="i" src="images/infarto.jpg" alt="xis tudo">
-                        <h1>xis infarto
-                            R$:22,00
-                        </h1>
+                    <div class="c2">
+                        <div class=" frango p8">
+                            <img class="f p8" src="images/frango.jpg" alt="xis frango">
+                            <h1>xis frango<br> 
+                                R$:15,99
+                            </h1>
+                        </div>
+                        <div class="stro p8">
+                            <img class="s p8" src="images/strogonoff.jpg" alt="xis estrogonoff">
+                            <h1> xis strogonoff
+                                R$:18,00
+                            </h1>
+                        </div>
+                        <div class="infarto p8">
+                            <img class="i p8" src="images/infarto.jpg" alt="xis tudo">
+                            <h1>xis infarto<br>
+                                R$:22,00
+                            </h1>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <div class="container2">
         </div>
 </body>
