--- a/index.html
+++ b/index.html
@@ -8,74 +8,60 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-        <header>
-                <div class="container-menu">
-                    <div class="logo">
-                        <img class="logoimg" src="images/download.jpg" alt="tri-lanches">
-                    </div>
-                    <div class="menu">
-                        <nav>
-                            <ul>
-                                <li> <a href="#">xis</a></li>
-                                <li><a href="#">cachorro quente</a></li>
-                                <li><a href="#">petiscos</a></li>
-                                <li><a href="#">whatsapp</a></li>
-                                <li class="cadastro"><a class="cd" href="#">cadastre-se</a> </li>
-                                <li class="log"><a href="#" class="log">login</a> </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-        </header>
-        <section>
-            <div class="container1">
-                <div class="container">
-                    <div class="c1">
-                        <div class="salada p8">
-                            <div class="salad" ><img class="salad p8" src="images/salada.jpg" alt="xis salada"></div>
-                            <div class="h1">
-                                <h1>xis salada<br>
-                                    R$:15,00
-                                </h1>
-                            </div>
-                        </div>
-                        <div class=" coracao p8">
-                            <img class="cora p8 " src="images/coracao.jpg" alt="xis coraçao">
-                            <h1>xis coração <br>
-                                R$:18,00
-                            </h1>
-                        </div>
-                        <div class=" bacon p8">
-                            <img class="b p8" src="images/bacon.jpg" alt="xis de bacon">
-                            <h1>xis bacon <br>
-                                R$:18,00
-                            </h1>
-                        </div>
-                    </div>
-                    <div class="c2">
-                        <div class=" frango p8">
-                            <img class="f p8" src="images/frango.jpg" alt="xis frango">
-                            <h1>xis frango<br> 
-                                R$:15,99
-                            </h1>
-                        </div>
-                        <div class="stro p8">
-                            <img class="s p8" src="images/strogonoff.jpg" alt="xis estrogonoff">
-                            <h1> xis strogonoff
-                                R$:18,00
-                            </h1>
-                        </div>
-                        <div class="infarto p8">
-                            <img class="i p8" src="images/infarto.jpg" alt="xis tudo">
-                            <h1>xis infarto<br>
-                                R$:22,00
-                            </h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <div class="container2">
+    <header>
+        <div class="container">
+         <div class="logo">
+            <img src="images/download.jpg" alt="logo">
+         </div> 
+         <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="#">Lanches</a></li>
+                    <li><a href="#">petiscos</a></li>
+                    <li class="whats"><a href="#">whatsapp</a></li>
+                    <li class="face"><a href="#">facebook</a></li>
+                </ul>
+            </nav>
+        </div> 
         </div>
+    </header>
+    <section class="container c1">
+        <article>
+            <div class="lanches">
+                <img src="images/salada.jpg" alt="xis salada">
+                <div class="title">xis salada R$:12,00</div>
+            </div>
+        </article>
+        <article>
+            <div class="lanches">
+                <img src="images/frango.jpg" alt="xis frango">
+                <div class="title">xis salada R$:12,00</div>
+            </div>
+        </article>
+        <article>
+            <div class="lanches">
+                <img src="images/bacon.jpg" alt="xis bacon">
+                <div class="title">xis salada R$:12,00</div>
+            </div>
+        </article>
+        <article>
+            <div class="lanches">
+                <img src="images/coracao.jpg" alt="xis coracao">
+                <div class="title">xis salada R$:12,00</div>
+            </div>
+        </article>
+        <article>
+            <div class="lanches">
+                <img src="images/strogonoff.jpg" alt="xis strogonoff">
+                <div class="title">xis salada R$:12,00</div>
+            </div>
+        </article>
+        <article>
+            <div class="lanches">
+                <img src="images/infarto.jpg" alt="xis infarto">
+                <div class="title">xis salada R$:12,00</div>
+            </div>
+        </article>
+    </section>
 </body>
 </html>
