--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
          </div> 
          <div class="menu">
             <nav>
+                <div class="menumobile">
+                   <div class="mm-line"></div> 
+                   <div class="mm-line"></div> 
+                   <div class="mm-line"></div> 
+                </div>
                 <ul>
                     <li><a href="#">Lanches</a></li>
                     <li><a href="#">petiscos</a></li>
@@ -29,37 +34,37 @@
         <article>
             <div class="lanches">
                 <img src="images/salada.jpg" alt="xis salada">
-                <div class="title">xis salada R$:12,00</div>
+                <div class="title lanches">xis salada R$:12,00</div>
             </div>
         </article>
         <article>
             <div class="lanches">
                 <img src="images/frango.jpg" alt="xis frango">
-                <div class="title">xis salada R$:12,00</div>
+                <div class="title lanches">xis salada R$:12,00</div>
             </div>
         </article>
         <article>
             <div class="lanches">
                 <img src="images/bacon.jpg" alt="xis bacon">
-                <div class="title">xis salada R$:12,00</div>
+                <div class="title lanches">xis salada R$:12,00</div>
             </div>
         </article>
         <article>
             <div class="lanches">
                 <img src="images/coracao.jpg" alt="xis coracao">
-                <div class="title">xis salada R$:12,00</div>
+                <div class="title lanches">xis salada R$:12,00</div>
             </div>
         </article>
         <article>
             <div class="lanches">
                 <img src="images/strogonoff.jpg" alt="xis strogonoff">
-                <div class="title">xis salada R$:12,00</div>
+                <div class="title lanches">xis salada R$:12,00</div>
             </div>
         </article>
         <article>
             <div class="lanches">
                 <img src="images/infarto.jpg" alt="xis infarto">
-                <div class="title">xis salada R$:12,00</div>
+                <div class="title lanches">xis salada R$:12,00</div>
             </div>
         </article>
     </section>
