pronto totalmente responsivo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tri lanches</title>
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript">
+    window.onload=function(){
+        document.querySelector(".menumobile").addEventListener("click", function(){ 
+            if(document.querySelector(".menu nav ul").style.display == 'flex') {
+                document.querySelector(".menu nav ul").style.display ='none';
+            } else{
+                document.querySelector(".menu nav ul") .style.display = 'flex';
+                }
+            
+        });
+    };
+    </script>
 </head>
 <body>
     <header>
